# rustberry

./: .gitignore  Cargo.toml  LICENSE  README.MD  pyproject.toml
.github/: build_wheels.yml
.github/workflows/: benchmarks.yml  build.yml  build_wheels.yml  release.yml
rustberry/: __init__.py  _rustberry.pyi
src/: lib.rs  util.rs
src/ast/: converter.rs  core.rs  gql_core.rs  mod.rs  strawberry.rs
src/ast/gql_core/: converter.rs  core_mirror.rs  error.rs  imports.rs  location.rs  mirror_converter.rs  mod.rs  reduced_core_mirror.rs
test_parser/: core_full_schema_bench.py  full_schema-pycon.py  graphql.schema  output.html  pyproject.toml  query.gql  rustberry_full_schema_bench.py  rustberry_full_strawberry_bench.py  simplequery.gql  test_gql_core.py  test_rust.py  test_strawberry.py  util.py
test_parser/benchmarks/: test_core_full_schema_bench.py  test_parsing_validation.py  util.py
