[package]
name = "rustberry"
version = "0.6.1"
edition = "2021"

[lib]
name = "_rustberry"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "rustberry._rustberry"

[dependencies]
apollo-compiler = { git = "https://github.com/apollographql/apollo-rs", rev="a88a3fe83d624a9a5ed2333fef994da2c3447b62" ,version = "0.6.0"}
apollo-parser = { git = "https://github.com/apollographql/apollo-rs" }

[dependencies.pyo3]
version = "0.13"
features = ["extension-module"]
