[package]
name = "rustberry"
version = "0.0.7"
edition = "2021"

[lib]
name = "_rustberry"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "rustberry._rustberry"

[dependencies]
apollo-compiler = { git = "https://github.com/apollographql/apollo-rs", rev="6a0b13f191cc77f0cfc76913e86b0a223f427d32"}
apollo-parser = { git = "https://github.com/apollographql/apollo-rs" }

[dependencies.pyo3]
version = "0.18"
features = ["extension-module"]
