[package]
name = "rustberry"
version = "0.0.12"
edition = "2021"

[lib]
name = "_rustberry"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "rustberry._rustberry"

[dependencies]
apollo-compiler = { git = "https://github.com/apollographql/apollo-rs"}
apollo-parser = { git = "https://github.com/apollographql/apollo-rs" }

[dependencies.pyo3]
version = "0.21.2"
features = ["extension-module"]
