[tool.poetry]
name = "rustberry"
version = "0.0.2"
description = ""
authors = ["Erik Wrede <erikwrede2@gmail.com>"]
readme = "README.md"
packages = [{include = "rustberry"}]

[tool.poetry.dependencies]
python = "^3.10"
maturin = "1.1.0"

[tool.maturin]
module-name = "rustberry._rustberry"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rustberry"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]