[tool.poetry]
name = "test-parser"
version = "0.1.0"
description = ""
authors = ["Erik Wrede <erikwrede2@gmail.com>"]
readme = "README.md"
packages = [{include = "test_parser"}]

[tool.poetry.dependencies]
python = "^3.11"

rustberry = { file = "../target/wheels/rustberry-0.0.14-cp311-cp311-macosx_11_0_arm64.whl" }
graphql-core = "^3.2.3"
pyinstrument = "^4.4.0"
strawberry-graphql = "^0.156.4"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
