[tool.poetry]
name = "test-parser"
version = "0.1.0"
description = ""
authors = ["Erik Wrede <erikwrede2@gmail.com>"]
readme = "README.md"
packages = [{include = "test_parser"}]

[tool.poetry.dependencies]
python = "^3.11"

pyinstrument = "^4.4.0"
strawberry-graphql = "^0.156.4"
graphql-core = "^3.2.3"
pytest = "^8.2.1"

[tool.poetry.group.local.dependencies]

[tool.poetry.group.dev.dependencies]
pytest-codspeed = "^2.2.1"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
